--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ inflection==0.5.1
 iniconfig==2.3.0
 packaging==25.0
 pluggy==1.6.0
+psycopg==3.2.12
+psycopg-binary==3.2.12
 Pygments==2.19.2
 PyJWT==2.10.1
 pytest==8.4.2
